k8s/kafka-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: kafka-demo
  labels:
    app: kafka-ui
spec:
  type: ClusterIP
  selector:
    app: kafka-ui
  ports:
    - name: http
      port: 8080
      targetPort: http
